Добавлен заголовок страницы
css пока не настроен как нужно

--- a/intex.html
+++ b/intex.html
@@ -15,7 +15,18 @@
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="container">
+            <div class="navbar">
+                <div>
+                    <a class="title" href="#">
+                        <img class="title_icon" src="icons/favicon_clear.png" alt="Logo" width="43px" height="48px">
+                        <p class="title_text">V.I.S.D.O.M. Lab</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
