--- a/index.html
+++ b/index.html
@@ -15,33 +15,44 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <nav>
-                <a class="title" href="#">
-                    <img class="title_icon" src="icons/favicon_clear.png" alt="Favicon" width="43px" height="48px">
-                    <p class="title_text">V.I.S.D.O.M. Lab</p>
-                </a>
-                <span class="menu">
-                    <a href="#">Проекты</a>
-                    <a href="#">Партнёры</a>
-                    <a href="#">Специалисты</a>
-                    <a href="#">Контакты</a>
-                </span>
-            </nav>
+    <div class="wrapper">
+        <header>
+            <div class="header_container">
+                <nav>
+                    <a class="title" href="#">
+                        <img class="title_icon" src="icons/favicon_clear.png" alt="Favicon" width="43px" height="48px">
+                        <p class="title_text">V.I.S.D.O.M. Lab</p>
+                    </a>
+                    <span class="menu">
+                        <a href="#">Проекты</a>
+                        <a href="#">Партнёры</a>
+                        <a href="#">Специалисты</a>
+                        <a href="#">Контакты</a>
+                    </span>
+                </nav>
 
-            <section class="header_main">
-                <div class="header_main_text_line">
-                    <img src="icons/Logo.png" alt="Logo">
-                    <span class="header_slogan">Научный подход к разработке ПО</span>
-                </div>
-                <div>
-                    <p class="header_logo_text">Volgograd Innovative Semantic Data Observation and Management Laboratory
-                    </p>
-                </div>
-            </section>
-        </div>
-    </header>
+                <section class="header_main">
+                    <div class="header_main_text_line">
+                        <img src="icons/Logo.png" alt="Logo">
+                        <span class="header_slogan">Научный подход к разработке ПО</span>
+                    </div>
+                    <div>
+                        <p class="header_logo_text">Volgograd Innovative Semantic Data Observation and Management
+                            Laboratory
+                        </p>
+                    </div>
+                </section>
+            </div>
+        </header>
+
+        <main class="main">
+
+        </main>
+
+        <footer class="footer">
+
+        </footer>
+    </div>
 
     <script src="js/scripts.js"></script>
 </body>
