Сделана адаптивность лого и текста заголовка

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <section class="header_main">
                     <div class="header_main_text_line">
-                        <img src="icons/Logo.png" alt="Logo">
+                        <img class="logo_icon" src="icons/Logo.png" alt="Logo">
                         <span class="header_slogan">Научный подход к разработке ПО</span>
                     </div>
                     <div>
