Улучшена адаптивность красной линии

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <body>
     <div class="wrapper">
         <header>
+            <div class="red_slice"></div>
+
             <div class="triangle_slicing">
                 <div class="header_container">
                     <nav>
@@ -46,7 +48,6 @@
                     </section>
                 </div>
             </div>
-            <div class="header_redline"></div>
             <div class="header_illustration">
                 <img src="icons/IT-picture.png" alt="Illustration">
             </div>
