--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="red_slice"></div>
-
-            <div class="triangle_slicing">
+            <div id="main" class="triangle_slicing">
                 <div class="header_container">
                     <nav>
                         <a class="title" href="#">
@@ -48,6 +46,9 @@
                     </section>
                 </div>
             </div>
+
+            <div id="red" class="red_slice"></div>
+
             <div class="header_illustration">
                 <img src="icons/IT-picture.png" alt="Illustration">
             </div>
@@ -62,7 +63,8 @@
         </footer>
     </div>
 
-    <script src="js/scripts.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 
 </html>
