--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="wrapper">
-        <header>
+        <header class="header">
             <div id="main" class="triangle_slicing">
                 <div class="header_container">
                     <nav>
