Сделан основной контент хэдера + адаптив

--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="header__content _container">
+            <div class="header__menu menu">
+                <a href="#" class="menu__logo logo">
+                    <img src="icons/favicon_clear.png" alt="Favicon" class="logo__image">
+                    <span class="logo__text">V.I.S.D.O.M. Lab</span>
+                </a>
+                <nav class="menu__body">
+                    <ul class="menu__list">
+                        <li><a href="#" class="menu__link">Проекты</a></li>
+                        <li><a href="#" class="menu__link">Партнёры</a></li>
+                        <li><a href="#" class="menu__link">Специалисты</a></li>
+                        <li><a href="#" class="menu__link">Контакты</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header__main header-main">
+                <div class="header-main__logo big-logo">
+                    <img src="icons/Logo.png" alt="Logo" class="big-logo__image">
+                    <div class="big-logo__title">
+                        <h1>Научный подход <br> к разработке ПО</h1>
+                    </div>
+                </div>
+                <div class="header-main__description">
+                    <h3>Volgograd Innovative Semantic Data <br> Observation and Management Laboratory</h3>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
