Рефакторинг хэдер-контента

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 </nav>
             </div>
             <div class="header__main header-main">
-                <div class="header-main__logo big-logo">
-                    <img src="icons/Logo.png" alt="Logo" class="big-logo__image">
-                    <div class="big-logo__title">
+                <div class="header-main__logo">
+                    <img src="icons/Logo.png" alt="Logo" class="header-main__image">
+                    <div class="header-main__title">
                         <h1>Научный подход <br> к разработке ПО</h1>
                     </div>
                 </div>
