--- a/index.html
+++ b/index.html
@@ -17,33 +17,36 @@
 
 <body>
     <header class="header">
-        <div class="header__content _container">
-            <div class="header__menu menu">
-                <a href="#" class="menu__logo logo">
-                    <img src="icons/favicon_clear.png" alt="Favicon" class="logo__image">
-                    <span class="logo__text">V.I.S.D.O.M. Lab</span>
-                </a>
-                <nav class="menu__body">
-                    <ul class="menu__list">
-                        <li><a href="#" class="menu__link">Проекты</a></li>
-                        <li><a href="#" class="menu__link">Партнёры</a></li>
-                        <li><a href="#" class="menu__link">Специалисты</a></li>
-                        <li><a href="#" class="menu__link">Контакты</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="header__main header-main">
-                <div class="header-main__logo">
-                    <img src="icons/Logo.png" alt="Logo" class="header-main__image">
-                    <div class="header-main__title">
-                        <h1>Научный подход <br> к разработке ПО</h1>
-                    </div>
+        <div id="main" class="header__background">
+            <div class="header__content _container">
+                <div class="header__menu menu">
+                    <a href="#" class="menu__logo logo">
+                        <img src="icons/favicon_clear.png" alt="Favicon" class="logo__image">
+                        <span class="logo__text">V.I.S.D.O.M. Lab</span>
+                    </a>
+                    <nav class="menu__body">
+                        <ul class="menu__list">
+                            <li><a href="#" class="menu__link">Проекты</a></li>
+                            <li><a href="#" class="menu__link">Партнёры</a></li>
+                            <li><a href="#" class="menu__link">Специалисты</a></li>
+                            <li><a href="#" class="menu__link">Контакты</a></li>
+                        </ul>
+                    </nav>
                 </div>
-                <div class="header-main__description">
-                    <h3>Volgograd Innovative Semantic Data <br> Observation and Management Laboratory</h3>
+                <div class="header__main header-main">
+                    <div class="header-main__logo">
+                        <img src="icons/Logo.png" alt="Logo" class="header-main__image">
+                        <div class="header-main__title">
+                            <h1>Научный подход <br> к разработке ПО</h1>
+                        </div>
+                    </div>
+                    <div class="header-main__description">
+                        <h3>Volgograd Innovative Semantic Data <br> Observation and Management Laboratory</h3>
+                    </div>
                 </div>
             </div>
         </div>
+        <div id="red" class="header__red-slice"></div>
     </header>
 
     <script type="text/javascript" src="js/jquery.js"></script>
