Добавлена адаптивная картинка

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             </div>
         </div>
         <div id="red" class="header__red-slice"></div>
+        <div class="header__illustration">
+            <img src="icons/IT-picture-1.png" alt="Illustration">
+        </div>
     </header>
 
     <script type="text/javascript" src="js/jquery.js"></script>
