Добавлен main блок под header'ом

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         </div>
     </header>
 
+    <main class="main">
+
+    </main>
+
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
