Сделана первая секция контента: Проекты
Добавлена анимация при переходе по внутренней ссылке

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <span class="logo__text">V.I.S.D.O.M. Lab</span>
                     </a>
                     <nav class="menu__body">
-                        <ul class="menu__list">
-                            <li><a href="#" class="menu__link">Проекты</a></li>
+                        <ul id="menu" class="menu__list">
+                            <li><a href="#projects" class="menu__link">Проекты</a></li>
                             <li><a href="#" class="menu__link">Партнёры</a></li>
                             <li><a href="#" class="menu__link">Специалисты</a></li>
                             <li><a href="#" class="menu__link">Контакты</a></li>
@@ -53,7 +53,107 @@
     </header>
 
     <main class="main">
+        <section id="projects" class="projects">
+            <div class="projects__content _container">
+                <div class="projects__title section-title">
+                    <h2>Наши проекты</h2>
+                </div>
+                <div class="projects__body">
+                    <ul class="projects__list">
+                        <li>
+                            <div class="projects__card">
+                                <div class="projects__text">
+                                    <div class="projects__name">
+                                        <h2>B2Doc: EndoPro: <br> Сервис патронирования пациентов после операции</h2>
+                                    </div>
+                                    <div class="projects__description">
+                                        <p class="text">
+                                            Для пациента:<br>
+                                            Мобильное приложение и чат-бот, которые сопровождают пациента в период до и
+                                            после операции по замене сустава.
+                                            Сопровождение осуществляется при помощи ежедневных уведомлений пациенту о
+                                            необходимости выполнения назначенной
+                                            рекомендации.<br><br>
 
+                                            Для врача:<br>
+                                            Web-приложение и мобильное приложение, которые позволяют врачу отслеживать
+                                            динамику состояния пациента во время
+                                            реабилитационного периода и в нужный момент сменить лечение в случае
+                                            ухудшения
+                                            состояния пациента.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="projects__image">
+                                    <img src="icons/projects/1.jpg" alt="Project screenshot">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="projects__card">
+                                <div class="projects__image_reverted">
+                                    <img src="icons/projects/2.jpg" alt="Project screenshot">
+                                </div>
+                                <div class="projects__text">
+                                    <div class="projects__name">
+                                        <h2>Девирта – Точность: <br> Программа реабилитации для восстановления моторики
+                                        </h2>
+                                    </div>
+                                    <div class="projects__description">
+                                        <p class="text">
+                                            Программа виртуальной реальности «Девирта-Точность» – это мультимедийная
+                                            реабилитационная система
+                                            с использованием виртуальной реальности и механизма биологически обратной
+                                            связи
+                                            для восстановления крупной
+                                            и мелкой моторики верхних конечностей.<br><br>
+
+                                            Программа виртуальной реальности «Девирта-Точность» базируется на
+                                            использовании
+                                            бесконтактного сенсорного датчика, что
+                                            обеспечивает дополнительную свободу
+                                            в проведении упражнений. Этот инновационный продукт
+                                            не только сокращает реабилитационный период, но и делает проведение
+                                            восстановительных упражнений приятным
+                                            и эффективным.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="projects__card">
+                                <div class="projects__text">
+                                    <div class="projects__name">
+                                        <h2>CRMEXP: <br> Система управления процессами для судебных экспертов</h2>
+                                    </div>
+                                    <div class="projects__description">
+                                        <p class="text">
+                                            Система позволяет вести подробный учёт всех исследований, находящихся в
+                                            данный
+                                            момент
+                                            в делопроизводстве: следить за сроками, не упускать появления новых
+                                            данных.<br><br>
+
+                                            Помимо этого в CRMExp можно вести кадровый учёт, учёт оплаты труда
+                                            экспертов.
+                                            Программа позволяет просто
+                                            и наглядно получать подробную статистику по работе компании, что позволит
+                                            лучше
+                                            вести дела и держать всё
+                                            под контролем.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="projects__image">
+                                    <img src="icons/projects/3.jpg" alt="Project screenshot">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script type="text/javascript" src="js/jquery.js"></script>
