Сделана вторая секция контента: Партнёры
Пока не до конца адаптивно: картинка становится нечитаемо маленькой при маленьком разрешении

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <nav class="menu__body">
                         <ul id="menu" class="menu__list">
                             <li><a href="#projects" class="menu__link">Проекты</a></li>
-                            <li><a href="#" class="menu__link">Партнёры</a></li>
+                            <li><a href="#partners" class="menu__link">Партнёры</a></li>
                             <li><a href="#" class="menu__link">Специалисты</a></li>
                             <li><a href="#" class="menu__link">Контакты</a></li>
                         </ul>
@@ -151,6 +151,16 @@
                             </div>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </section>
+        <section id="partners" class="partners">
+            <div class="partners__content">
+                <div class="partners__title section-title">
+                    <h2>Наши партнёры</h2>
+                </div>
+                <div class="partners__image">
+                    <img src="icons/partners/1.png" alt="partners list image">
                 </div>
             </div>
         </section>
