Сделана третья секция контента: Специалисты
Всё полностью адаптивно
По второй секции принял решение оставить как есть: в целом, разглядеть логотипы на фото можно

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <ul id="menu" class="menu__list">
                             <li><a href="#projects" class="menu__link">Проекты</a></li>
                             <li><a href="#partners" class="menu__link">Партнёры</a></li>
-                            <li><a href="#" class="menu__link">Специалисты</a></li>
+                            <li><a href="#masters" class="menu__link">Специалисты</a></li>
                             <li><a href="#" class="menu__link">Контакты</a></li>
                         </ul>
                     </nav>
@@ -160,7 +160,99 @@
                     <h2>Наши партнёры</h2>
                 </div>
                 <div class="partners__image">
-                    <img src="icons/partners/1.png" alt="partners list image">
+                    <img src="icons/partners/1.png" alt="partners list image full">
+                </div>
+            </div>
+        </section>
+        <section id="masters" class="masters">
+            <div class="masters__content _container">
+                <div class="masters__title section-title">
+                    <h2>Наши специалисты</h2>
+                </div>
+                <div class="masters__body">
+                    <ul class="masters__list">
+                        <li>
+                            <div class="masters__card">
+                                <div class="masters__description-background">
+                                    <div class="masters__description-body">
+                                        <div class="masters__description-name">
+                                            <p class="masters__description-name_accent">Орлова</p>
+                                            <p class="masters__description-name_common">Юлия Александровна</p>
+                                        </div>
+                                        <div class="masters__description-text">
+                                            <p class="text_white">
+                                                Руководитель лаборатории <br><br>
+
+                                                д.т.н., к.т.н., зав. кафедрой ПОАС, ученый секретарь диссертационного
+                                                совета
+                                                Опыт работы – 14 лет
+                                                Член-корреспондент Академии менеджмента образования и культуры, член
+                                                Российской Ассоциации Нечетких систем и мягких
+                                                вычислений, Российской ассоциации искусственного интеллекта,
+                                                руководитель грантов Президента РФ, РНФ, РФФИ и др.
+                                                Эксперт «Росаккредагенстсво», эксперт РФФИ
+                                                более 270 научных работ
+                                                8-903-317-64-16
+                                                yulia.orlova@gmail.com
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="masters__photo">
+                                    <img src="icons/masters/1.jpg" alt="Master's photo">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="masters__card">
+                                <div class="masters__photo masters__photo_reverted">
+                                    <img src="icons/masters/2.jpg" alt="Master's photo">
+                                </div>
+                                <div class="masters__description-background">
+                                    <div class="masters__description-body">
+                                        <div class="masters__description-name">
+                                            <p class="masters__description-name_accent">Зубков</p>
+                                            <p class="masters__description-name_common">Александр Владимирович</p>
+                                        </div>
+                                        <div class="masters__description-text">
+                                            <p class="text_white">
+                                                Team Leader <br><br>
+
+                                                Стажировался в комании Intel и в лаборатории SportEMI (г. Ереван,
+                                                Армения). Победитель хакатонов ДГТУ 2019
+                                                и участник JAVA-hack.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="masters__card">
+                                <div class="masters__description-background">
+                                    <div class="masters__description-body">
+                                        <div class="masters__description-name">
+                                            <p class="masters__description-name_accent">Студенты</p>
+                                            <p class="masters__description-name_common">ФЭВТ ВОЛГГТУ</p>
+                                        </div>
+                                        <div class="masters__description-text">
+                                            <p class="text_white">
+                                                Team <br><br>
+
+                                                Ответственные, мотивированные студенты старших курсов IT-специальностей
+                                                с фундаментальными знаниями не только в области
+                                                разработки, но и в других областях науки. Победители и участники
+                                                различных олимпиад, конкурсов, хакатонов, конференций.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="masters__photo">
+                                    <img src="icons/masters/3.jpg" alt="Master's photo">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
