Добавлена четвёртая секция контента: карта

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <li><a href="#projects" class="menu__link">Проекты</a></li>
                             <li><a href="#partners" class="menu__link">Партнёры</a></li>
                             <li><a href="#masters" class="menu__link">Специалисты</a></li>
-                            <li><a href="#" class="menu__link">Контакты</a></li>
+                            <li><a href="#location" class="menu__link">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -254,6 +254,16 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </section>
+        <section id="location" class="location">
+            <div class="location__content">
+                <div class="location__title section-title">
+                    <h2>Наше местоположение</h2>
+                </div>
+                <iframe class="location__map"
+                    src="https://yandex.ru/map-widget/v1/?um=constructor%3Abe1d0f3e0d3760f8ec743668791ff935da66281ae23171c7ec30afdc4121fcb0&amp;source=constructor"
+                    width="100%" height="600" frameborder="0"></iframe>
             </div>
         </section>
     </main>
