Сделан контент футера
Нужно стилизовать фон

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     </a>
                     <nav class="menu__body">
                         <ul id="menu" class="menu__list">
-                            <li><a href="#projects" class="menu__link">Проекты</a></li>
-                            <li><a href="#partners" class="menu__link">Партнёры</a></li>
-                            <li><a href="#masters" class="menu__link">Специалисты</a></li>
-                            <li><a href="#location" class="menu__link">Контакты</a></li>
+                            <li><a href="#projects" class="menu__link link">Проекты</a></li>
+                            <li><a href="#partners" class="menu__link link">Партнёры</a></li>
+                            <li><a href="#masters" class="menu__link link">Специалисты</a></li>
+                            <li><a href="#location" class="menu__link link">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -267,6 +267,41 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__background">
+            <div class="footer__content _container">
+                <div class="footer__main">
+                    <div class="footer__logo">
+                        <a href="#" class="logo">
+                            <img src="icons/favicon_clear.png" alt="Favicon" class="logo__image">
+                            <span class="logo__text">V.I.S.D.O.M. Lab</span>
+                        </a>
+                    </div>
+                    <div class="footer__contacts">
+                        <p class="footer__title footer-text">Контакты</p>
+                        <p class="footer-text">
+                            Россия, 400005, Волгоград, пр. им. Ленина, 28а, кабинет 901 <br><br>
+
+                            +7 (903)-317-64-16 <br><br>
+
+                            poaslab@gmail.com
+                        </p>
+                    </div>
+                    <div class="footer__thanks">
+                        <p class="footer__title footer-text">Благодарности</p>
+                        <p class="footer-text">За предоставленные картинки благодарность сервису Freepik</p>
+                        <a href="https://www.freepik.com/author/vectorjuice" class="footer_link link" target="_blank">
+                            vectorjuice
+                        </a>
+                    </div>
+                </div>
+                <div class="footer__copyright">
+                    <p class="footer-text">©2022. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
