Сделана основа для заднего фона футера

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     </main>
 
     <footer class="footer">
-        <div class="footer__background">
+        <div id="main2" class="footer__background">
             <div class="footer__content _container">
                 <div class="footer__main">
                     <div class="footer__logo">
@@ -301,6 +301,7 @@
                 </div>
             </div>
         </div>
+        <div id="red2" class="footer__red-slice"></div>
     </footer>
 
     <script type="text/javascript" src="js/jquery.js"></script>
