Исправлено оформление футера

--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@
                         <a href="https://www.freepik.com/author/vectorjuice" class="footer_link link" target="_blank">
                             vectorjuice
                         </a>
-                        <p class="footer-text">Данный сайт был разработан студентом группы ПрИн-267 Жихаревым А. Б. в
-                            рамках учебной практики на кафедре ПОАС ВолгГТУ в 2022 году</p>
                     </div>
                 </div>
                 <div class="footer__copyright">
+                    <p class="footer-text">Данный сайт был разработан студентом группы ПрИн-267 Жихаревым А. Б. <br> в
+                        рамках учебной практики на кафедре ПОАС ВолгГТУ в 2022 году</p> <br>
                     <p class="footer-text">©2022. All rights reserved.</p>
                 </div>
             </div>
